Run main workflow every 15 days

--- a/.github/workflows/k8s-docs-link-check.yml
+++ b/.github/workflows/k8s-docs-link-check.yml
@@ -1,6 +1,9 @@
 name: Check Kubernetes documentation links
 
-on: push
+on:
+  push:
+  schedule:
+    - cron: '0 0 */15 * *'
 
 jobs:
   kubernetes-doc-link-check:
